--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,11 @@
+# Use lightweight Nginx
 FROM nginx:alpine
 
+# Copy all frontend files to Nginx web root
 COPY . /usr/share/nginx/html
 
+# Expose port 80
 EXPOSE 80
 
-
-
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
