--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -6,13 +6,30 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  test-build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # ---------- BACKEND TESTING ----------
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run backend tests
+        working-directory: ./backend
+        run: |
+          python manage.py test
+
+      # ---------- DOCKER BUILD ----------
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
