--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -43,6 +43,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+     # ---------- FRONTEND TESTING ----------
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm install
+
+      - name: Run frontend tests
+        working-directory: ./frontend
+        run: npm test
+        
       # ---------- DOCKER ----------
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
