ci: add test:ci script for frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "serve -s build",
-    "test": "npx jest"
+    "test": "npx jest",
+    "test:ci": "npm test"
   },
   "dependencies": {
     "serve": "^14.2.0"
