fix(ci): resolve jest permission issue in frontend tests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "serve -s build",
-    "test": "npx jest",
+    "test": "jest",
     "test:ci": "npm test"
   },
   "dependencies": {
