--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -36,14 +36,13 @@ jobs:
   build-and-push:
     name: Build & Push Docker Images
     needs: test
-    if: github.event_name == 'push'
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-     # ---------- FRONTEND TESTING ----------
+      # ---------- FRONTEND TESTING ----------
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -51,12 +50,12 @@ jobs:
 
       - name: Install frontend dependencies
         working-directory: ./frontend
-        run: npm install
+        run: npm ci
 
       - name: Run frontend tests
         working-directory: ./frontend
-        run: npm test
-        
+        run: node ./node_modules/jest/bin/jest.js
+
       # ---------- DOCKER ----------
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -68,6 +67,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build & push backend image
+        if: github.event_name == 'push'
         uses: docker/build-push-action@v5
         with:
           context: ./backend
@@ -75,6 +75,7 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/eventapp-backend:latest
 
       - name: Build & push frontend image
+        if: github.event_name == 'push'
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
